# news-translation-engine

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
data/processed/: stage1_sources.json  stage1_stats.json
data/scripts/: build_stage1_dataset.py  validate_stage1_sources.py
evaluation/: eval_bleu_comet.py  prompts.py
evaluation/datasets/: build_news_testset.py  flores.py
evaluation/results/: README.md  qwen2.5-7b_flores_ko2en_baseline.json
scripts/: runpod_setup.sh
training/: finetune_lora.py
training/configs/: stage1_qwen2.5_7b.smoke.yaml  stage1_qwen2.5_7b.yaml
